--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -27,6 +27,8 @@
   
   <!--Se agergo hasta aca 13112024 en la facu-->
   
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <style>
         footer {
             position: end;
@@ -145,74 +147,7 @@
 
 </html>
 <!--Subido a el 13/11/2024-->
-<style>
-  /* Estilo general para el fondo y color en modo claro */
-  body[data-bs-theme="light"] {
-      background-color: #ffffff; /* Blanco */
-      color: #000000; /* Texto negro */
-  }
-
-  /* Estilo general para el fondo y color en modo oscuro */
-  body[data-bs-theme="dark"] {
-      background-color: #121212; /* Fondo oscuro */
-      color: #ffffff; /* Texto blanco */
-  }
-
-  /* Estilo para elementos internos como divs, botones, etc. */
-  body[data-bs-theme="light"] .navbar,
-  body[data-bs-theme="light"] .footer,
-  body[data-bs-theme="light"] .container,
-  body[data-bs-theme="light"] .card {
-      background-color: #f8f9fa; /* Fondo claro */
-      color: #000000; /* Texto oscuro */
-  }
-
-  body[data-bs-theme="dark"] .navbar,
-  body[data-bs-theme="dark"] .footer,
-  body[data-bs-theme="dark"] .container,
-  body[data-bs-theme="dark"] .card {
-      background-color: #343a40; /* Fondo oscuro */
-      color: #ffffff; /* Texto claro */
-  }
-
-  /* Opcional: cambio de color de los botones */
-  body[data-bs-theme="light"] .btn {
-      background-color: #007bff; /* Azul claro */
-      color: #ffffff;
-  }
-
-  body[data-bs-theme="dark"] .btn {
-      background-color: #495057; /* Gris oscuro */
-      color: #ffffff;
-  }
-</style>
-
-
-<style>
-  body[data-bs-theme="light"] .custom-background {
-      background-color: #e9ecef; /* Fondo claro */
-      color: #000000; /* Texto oscuro */
-  }
-
-  body[data-bs-theme="dark"] .custom-background {
-      background-color: #495057; /* Fondo oscuro */
-      color: #ffffff; /* Texto claro */
-  }
-</style>
-
-
-<script>
-  // Evento para alternar el tema
-  document.getElementById('theme-toggle').addEventListener('click', function() {
-      var body = document.body; // Obtener el cuerpo del documento
-      // Alternar entre 'light' y 'dark'
-      if (body.getAttribute('data-bs-theme') === 'light') {
-          body.setAttribute('data-bs-theme', 'dark');
-      } else {
-          body.setAttribute('data-bs-theme', 'light');
-      }
-  });
-</script>
+<!--Aca estaba lo del moto oscuro-->
 <!--Subido a el hasta aca 13/11/2024-->
 <style>
   body {
