--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -73,26 +73,26 @@
             <div class="accordion-body">
                 <!--Tabla gastos-->
                     <div class="gastos-container">
+                        {% if gastos_pendientes %}
                         {% for gasto in gastos_pendientes %}
                         <div class="gasto-item">
                             <div class="gasto-campo">{{ gasto.categoria }}</div>
                             <div class="gasto-campo">{{ gasto.nombre }}</div>
                             <div class="gasto-campo">{{ gasto.monto }}</div>
                             <div class="gasto">
-                                <div class="row">
-                                    <div class="col-4 text-center">
-                                        <i class="fa-solid fa-check"></i>
-                                    </div>
-                                    <div class="col-4 text-center">
-                                        <i class="fa-regular fa-pen-to-square"></i>
-                                    </div>
-                                </div>
+                                <button type="button" class="btn btn-outline-secondary btn-sm" 
+                                        data-bs-toggle="modal" 
+                                        data-bs-target="#modalEditar" 
+                                        data-gasto-id="{{ gasto.id_gasto }}" 
+                                        onclick="abrirModalConfirmarYEditar('{{ gasto.id_gasto }}')">
+                                    <i class="bi bi-pencil"></i>
+                                </button>
                             </div>
-                            
-                            
-                            
                         </div>
                         {% endfor %}
+                    {% else %}
+                        <p>No hay gastos pendientes.</p>
+                    {% endif %}
                     </div>
                 
                 <!--Fin tabla gastos-->
@@ -108,7 +108,34 @@
           </h2>
           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
             <div class="accordion-body">
-              Este es el contenido del segundo ítem del acordeón.
+                <!--Agregado el 15/11/2024-->
+              <!--Tabla ingresos-->
+
+                <div class="gastos-container">
+                    {% if ingresos_pendientes %}
+                    {% for ingreso in ingresos_pendientes %}
+                    <div class="gasto-item">
+                        <div class="gasto-campo">{{ ingreso.categoria }}</div>
+                        <div class="gasto-campo">{{ ingreso.nombre }}</div>
+                        <div class="gasto-campo">{{ ingreso.monto }}</div>
+                        <div class="gasto">
+                            <button type="button" class="btn btn-outline-secondary btn-sm" 
+                                    data-bs-toggle="modal" 
+                                    data-bs-target="#modalEditar" 
+                                    data-gasto-id="{{ gasto.id_gasto }}" 
+                                    onclick="abrirModalConfirmarYEditar('{{ gasto.id_gasto }}')">
+                                <i class="bi bi-pencil"></i>
+                            </button>
+                        </div>
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <p>No hay gastos pendientes.</p>
+                {% endif %}
+                </div>
+                <!--Fin tablas ingresos-->
+
+                <!--Agregado hasta aca el 15/11/2024-->
             </div>
           </div>
         </div>
@@ -468,7 +495,87 @@
     }
 </script>
 
+<!--Agregado el 15/11/2024-->
+<!--Funcion para abrir modal -->
 
+
+<!-- Modal Editar -->
+<div class="modal fade" id="modalEditar" data-bs-backdrop="static" tabindex="-1" aria-labelledby="modalEditarLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalEditarLabel">Editar Gasto</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="formEditarGasto" method="POST" action="" onsubmit=" return enviarEdicion(event)">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="nombreModal" class="form-label">Nombre</label>
+                        <input type="text" class="form-control" id="nombreModal" name="nombre" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="montoModal" class="form-label">Monto</label>
+                        <input type="number" class="form-control" id="montoModal" name="monto" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="categoriaModal" class="form-label">Categoría</label>
+                        <select class="form-select" id="categoriaModal" name="categoria" required>
+                            {% for categoria in categorias %}
+                            <option value="{{ categoria.id }}">{{ categoria.nombre }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="metodo_pagoModal" class="form-label">Método de Pago</label>
+                        <select class="form-select" id="metodo_pagoModal" name="metodo_pago" required>
+                            <option value="Efectivo">Efectivo</option>
+                            <option value="Tarjeta">Tarjeta</option>
+                        </select>
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="tipo_gastoModal" name="tipo_gastoModal">
+                        <label class="form-check-label" for="tipo_gastoModal">gasto Fijo</label>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--Funcion para abrir modal de confirmacion o editar confirmar pago-->
+<script>
+function abrirModalConfirmarYEditar(gastoId) {
+        fetch(`/gastos/obtener/${gastoId}`)
+        
+        .then(response => response.json())
+        .then(data => {
+            if (!data.error) {
+                // Llena el modal con los datos del gasto
+                document.getElementById('nombreModal').value = data.nombre;
+                document.getElementById('montoModal').value = data.monto;
+                document.getElementById('categoriaModal').value = data.categoria_id;
+                document.getElementById('metodo_pagoModal').value = data.metodo_pago; // Agregado para método de pago
+                document.getElementById('tipo_gastoModal').checked = data.bl_fijo;
+
+                // Actualiza el action del formulario para que envíe a la URL de actualizar
+                const form = document.getElementById('formEditarGasto');
+                form.action = `/gastos/editar/${gastoId}/`;
+
+            } else {
+                alert(data.error);
+            }
+        })
+        .catch(error => console.error('Error:', error));
+    }
+
+</script>
+
+<!--Agregado hasta aca el 15/11/2024-->
 <!--Tablas-->
 <script>
     $(document).ready(function() {
