--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -108,7 +108,7 @@
                                     data-bs-toggle="modal" 
                                     data-bs-target="#modalEditar" 
                                     data-gasto-id="{{ gasto.id_gasto }}" 
-                                    onclick="abrirModalConfirmarYEditar('{{ gasto.id_gasto }}')"
+                                
                                     >
                                         <i class="bi bi-pencil"></i>
                                     </button>
@@ -154,7 +154,7 @@
                                         data-bs-toggle="modal" 
                                         data-bs-target="#modalEditar" 
                                         data-ingreso-id="{{ ingreso.id_ingreso }}" 
-                                        onclick="abrirModalConfirmarYEditar('{{ ingreso.id_ingreso }}')">
+                                        onclick="abrirModalConfirmarYEditar('{{ ingreso.id_ingreso }}','{{ingreso.categoria}}')">
                                     <i class="bi bi-pencil"></i>
                                 </button>
                             </div>
@@ -275,11 +275,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="categoriaModal" class="form-label">Categoría</label>
-                        <select class="form-select" id="categoriaModal" name="categoria" required>
-                            {% for categoria in categorias %}
-                            <option value="{{ categoria.id_categoria }}">{{ categoria.categoria }}</option>
-                            {% endfor %}
-                        </select>
+                        <input  type="text" class="form-control" id="categoriaModal" name="categoria" disabled>
                     </div>
                     <div class="mb-3">
                         <label for="metodo_pagoModal" class="form-label">Método de Pago</label>
@@ -307,21 +303,21 @@
 
 <!--Funcion para abrir modal de confirmacion o editar confirmar pago-->
 <script>
-    function abrirModalConfirmarYEditar(gastoId) {
-            fetch(`/ingresos/obtener/${gastoId}`)
+    function abrirModalConfirmarYEditar(ingresoId,categoria) {
+            fetch(`/ingresos/obtener/${ingresoId}`)
             
             .then(response => response.json())
             .then(data => {
                 if (!data.error) {
-                    // Llena el modal con los datos del gasto
+                    // Llena el modal con los datos del ingreso
                     document.getElementById('nombreModal').value = data.nombre;
                     document.getElementById('montoModal').value = data.monto;
-                    document.getElementById('categoriaModal').value = data.categoria_id;
+                    document.getElementById('categoriaModal').value = categoria;
                     document.getElementById('metodo_pagoModal').value = data.metodo_pago; // Agregado para método de pago
-                    document.getElementById('tipo_gastoModal').checked = data.bl_fijo;
+                    document.getElementById('tipo_ingresoModal').checked = data.bl_fijo;
                     // Actualiza el action del formulario para que envíe a la URL de actualizar
                     const form = document.getElementById('formEditarIngreso');
-                    form.action = `/ingresos/obtener/${gastoId}/`;
+                    form.action = `/ingresos/obtener/${ingresoId}/`;
                 } else {
                     alert(data.error);
                 }
